--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    /* font-family: 'Inter', sans-serif;
-    font-family: 'Manrope', sans-serif; */
+    /* font-family: 'Manrope', sans-serif; */
     font-family: 'Poppins', sans-serif;
     /* font-family: 'Roboto', sans-serif; */
 }
@@ -147,4 +146,70 @@ header .container{
 }
 .logo-img img{
     width: 100%;
+}
+
+/*==========================
+    Product section start
+===========================*/
+.product-section{
+    padding: 100px 0;
+}
+.product-section .container{
+    max-width: 1100px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center; 
+    gap: 30px;
+}
+.product-details{
+   padding: 17px 15px 20px 14px;
+   box-shadow: var(--box-shadow);
+   border-radius: 5px;
+}
+.product-details .images-width{
+    width: 100%;
+}
+.product-details h2{
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 40px;
+    color: var(--p-heading1);
+}
+.product-details h3{
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    color: var(--black-opacity);
+    line-height: 150%;
+    margin-bottom: 10px;
+}
+.rating-sec {
+    margin-bottom: 6px;
+  }
+.rating-sec .fa-star{
+   color: #FB8200;
+   font-size: 12px;
+}
+.rating-sec .fa-star-half-stroke{
+    color: #FB8200;
+    font-size: 12px;
+ }
+.rating-sec .star-point{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.1px; 
+    color: #5E6366;
+    margin-left: 10px;
+}
+.product-info{
+    width: 208px;
+}
+.product-info p{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 180%;
+    letter-spacing: 0.018em;
+    color: #787885;
 }
