--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    /* font-family: 'Manrope', sans-serif; */
     font-family: 'Poppins', sans-serif;
-    /* font-family: 'Roboto', sans-serif; */
 }
 *::selection{
     color: hotpink;
@@ -117,7 +115,6 @@ header .container{
 .banner-details .fa-arrow-right{
     margin-left: 18px;
 }
-
 .banner-img{
     width: 40%;
 }
@@ -132,7 +129,7 @@ header .container{
     padding: 50px 0;
 }
 .logo-section .container{
-    max-width: 1100px;
+    max-width: 1000px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -155,8 +152,10 @@ header .container{
     padding: 100px 0;
 }
 .product-section .container{
-    max-width: 1100px;
+    max-width: 1000px;
     margin: 0 auto;
+}
+.all-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center; 
@@ -196,12 +195,13 @@ header .container{
     font-size: 12px;
  }
 .rating-sec .star-point{
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 14px;
     line-height: 22px;
     letter-spacing: 0.1px; 
     color: #5E6366;
-    margin-left: 10px;
+    margin-left: 7px;
 }
 .product-info{
     width: 208px;
@@ -212,4 +212,112 @@ header .container{
     line-height: 180%;
     letter-spacing: 0.018em;
     color: #787885;
+}
+.all-product-list{
+    margin-top: 60px;
+    text-align: right;
+}
+.all-product-list .btn-more{
+    font-weight: 700;
+    font-size: 16px;
+    color: var(--btn-bg); 
+}
+.all-product-list .fa-arrow-right{
+    margin-left: 10px;
+    color: var(--btn-bg); 
+}
+
+/*==========================
+    Feature section start
+===========================*/
+.feature-section{
+    padding: 75px 0;
+}
+.feature-section .container{
+    max-width: 1060px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    gap: 130px; 
+}
+.feature-img{
+    width: 40%;
+}
+.feature-img .feature-images{
+    width: 100%;
+}
+.feature-details{
+    width: 60%;
+}
+.feature-details h1{
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 60px;
+    color: var(--p-heading2);  
+}
+.feature-details p{
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 28px;
+    color: #6C6C6C;  
+    margin-bottom: 22px;
+    padding-right: 50px;
+}
+.feature-details .btn-primary{
+    font-weight: 700;
+    font-size: 16px;
+    padding: 10px 24px;
+    background-color: var(--btn-bg);
+    color: #FFF;  
+}
+.feature-details .fa-arrow-right{
+    margin-left: 16px;
+}
+
+/*==========================
+    Footer section start
+===========================*/
+footer{
+    padding: 50px 0;
+    background-color: var(--p-heading2);
+} 
+footer .container{
+   max-width: 1140px;
+   margin: 0 auto; 
+}
+.footer-details h1{
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: center;
+    color: #FFF;
+    margin-bottom: 12px;
+}
+.footer-details p{
+    font-family: 'Manrope', sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    text-align: center;
+    color: #D9DBE1;
+}
+.footer-details ul {
+    text-align: center;
+    margin-top: 30px;
+  }
+.footer-details ul li{
+   list-style: none;
+   display: inline-block;
+   margin: 0 8px;
+}
+.footer-details ul li i{
+    width: 42px;
+    height: 42px;
+    text-align: center;
+    line-height: 43px;
+    background: #22213c;
+    color: #FFF;
+    border-radius: 50px;
+    font-size: 18px;
 }
